--- a/src/style.sass
+++ b/src/style.sass
@@ -23,7 +23,7 @@ body
   background: linear-gradient(to right, #232526, #414345)
   color: rgba(#FFF, .87)
 
-.js-append-links a
+a
   color: rgba(#FFF, .5) !important
   transition: color .2s
   &:hover
