--- a/index.pug
+++ b/index.pug
@@ -1,5 +1,5 @@
 - var link = 'letswrite-auth0-login'
-- var title = "加入成為 Let's Write 首批會員"
+- var title = "加入 Let's Write 會員"
 - var description = "用Auth0的Universal Login功能，來進行Let's Write的會員註冊、登入"
 
 <!DOCTYPE html>
@@ -51,8 +51,10 @@ html(lang="zh-TW")
     
     #app.container.w-480
       .title.text-center
-        h1 加入成為 Let's Write 首批會員
-        h2 首批加入會員的人，可以得到 我的掌聲 乙次
+        h1 加入 Let's Write 會員
+        h2 未來的某天，電子報設計完成後，會收到新文章的電子報
+        h6 筆記文：
+          a(href="https://letswrite.tw/auth0-login/", target="_blank") Let's Write
         
       hr
 
