--- a/index.pug
+++ b/index.pug
@@ -30,7 +30,7 @@ html(lang="zh-TW")
     meta(property="og:image:height", content="630")
     meta(property="og:image:alt", content=title)
 
-    link(rel="shortcut icon", href="https://i0.wp.com/letswrite.tw/wp-content/uploads/2019/07/cropped-letswrite512-1.jpg")
+    link(rel="shortcut icon", href="https://letswritetw.github.io/letswritetw/dist/img/logo_512.png")
 
     //- css
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css")
