--- a/index.pug
+++ b/index.pug
@@ -1,4 +1,4 @@
-- var link = 'letswrite-auth0-login'
+- var link = 'auth0-login'
 - var title = "加入 Let's Write 會員"
 - var description = "用Auth0的Universal Login功能，來進行Let's Write的會員註冊、登入"
 
@@ -10,10 +10,10 @@ html(lang="zh-TW")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title #{title} - Augustus - Let's Write
 
-    link(rel="canonical", href=`https://letswritetw.github.io/${link}/`)
-    meta(property="og:url", content=`https://letswritetw.github.io/${link}/`)
+    link(rel="canonical", href=`https://letswritetw.github.io/letswrite-${link}/`)
+    meta(property="og:url", content=`https://letswritetw.github.io/letswrite-${link}/`)
 
-    meta(property="fb:app_id", content="2435108729902508")
+    meta(property="fb:app_id", content="911000986339138")
     meta(property="og:type", content="website")
 
     meta(property="og:site_name", content="Let's Write")
@@ -24,8 +24,8 @@ html(lang="zh-TW")
     meta(property="og:description", content=description)
     meta(itemprop="description", content=description)
 
-    meta(itemprop="image", content=`https://letswritetw.github.io/${link}/fb.jpg?v=2`)
-    meta(property="og:image", content=`https://letswritetw.github.io/${link}/fb.jpg?v=2`)
+    meta(itemprop="image", content=`https://letswritetw.github.io/letswrite-${link}/fb.jpg?v=2`)
+    meta(property="og:image", content=`https://letswritetw.github.io/letswrite-${link}/fb.jpg?v=2`)
     meta(property="og:image:width", content="1200")
     meta(property="og:image:height", content="630")
     meta(property="og:image:alt", content=title)
